# translate-tools

./: .clinerules  .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: xtask-check.yml
crates/cli-tools/: Cargo.toml
crates/cli-tools/src/: lib.rs
crates/text-hook/: .gitignore  Cargo.toml  build.rs
crates/text-hook/constant_assets/: default_config.json  featured_hook_lists.json
crates/text-hook/src/: code_cvt.rs  custom_font.rs  debug_output.rs  delayed_attach.rs  dll_hijacking.rs  embedded_dict.rs  feature_conflicts.rs  hook.rs  lib.rs  locale_emulator.rs  mapping.rs  panic_utils.rs  patch.rs  resource_pack.rs  text_patch.rs  utils.rs  veh.rs  win_event_hook.rs  worker_thread.rs  x64dbg_1337_patch.rs
crates/text-hook/src/emulate_locale/: mod.rs
crates/text-hook/src/gl/: mod.rs  painter.rs
crates/text-hook/src/hook/: code_cvt_hook.rs  file_hook.rs  locale_hook.rs  mod.rs  text_hook.rs  window_hook.rs
crates/text-hook/src/hook/impls/: ao_vo.rs  bleed.rs  bruns.rs  c4.rs  complets.rs  debug_file_impl.rs  default_impl.rs  g0win.rs  hitocos2.rs  love_bind.rs  lusts.rs  mizukake.rs  mod.rs  natsu_natsu.rs  rainmemory.rs  seraph.rs  spirite_destruction.rs  sukisuki.rs  uminom.rs  white_breath.rs
crates/text-hook/src/hook/trait_impls/: enum_font_proc.rs  mod.rs  resource_pack_redirect.rs
crates/text-hook/src/hook/traits/: code_cvt_hook.rs  file_hook.rs  life_cycle_hook.rs  mod.rs  text_hook.rs  window_hook.rs
crates/text-hook/src/hook_impl/: ao_vo.rs  bittersweet_fools.rs  bleed.rs  bruns.rs  c4.rs  debug_file_hook_impl.rs  debug_file_impl.rs  default_hook_impl.rs  default_impl.rs  lusts.rs  mod.rs  noise.rs  snow_radish.rs  sukisuki.rs  summer_radish.rs  uminom.rs  white_breath.rs
crates/text-hook/src/hook_utils/: iat_patch.rs  mod.rs  protect_guard.rs
crates/text-hook/src/mapping/: mod.rs
crates/text-hook/src/overlay/: mod.rs  window.rs
crates/text-hook/src/patch/: mod.rs
crates/text-hook/src/utils/: error_handling.rs  gl.rs  hwbp.rs  mod.rs  nt.rs  panic.rs  raii_wrapper.rs  win32.rs
crates/text-hook/src/utils/exts/: mod.rs  path_ext.rs  ptr_ext.rs  slice_ext.rs  str_ext.rs
crates/text-hook/src/utils/mem/: iat.rs  mod.rs  patch.rs  protect_guard.rs
crates/text-hook/src/utils/trait_impls/: enum_font_proc.rs  mod.rs
crates/translate-macros/: Cargo.toml
crates/translate-macros/src/: byte_slice.rs  expand_by_files.rs  ffi_catch_unwind.rs  flate.rs  generate_detours.rs  generate_exports_from_hijacked_dll.rs  generate_mapping_data.rs  generate_patch_data.rs  lib.rs  search_hook_impls.rs  utils.rs
crates/translate-macros/src/impls/: byte_slice.rs  derive_default_hook.rs  embed.rs  expand_by_files.rs  ffi_catch_unwind.rs  flate.rs  generate_bitmap_font.rs  generate_constants_from_json.rs  generate_detours.rs  generate_exports_from_hijacked_dll.rs  generate_hook_lists_from_json.rs  generate_mapping_data.rs  generate_patch_data.rs  generate_patch_fn_from_1337.rs  generate_resource_pack.rs  generate_text_patch_data.rs  mod.rs  search_hook_impls.rs  utils.rs
crates/translate-macros/src/impls/detour/: detour_fn.rs  detour_trait.rs  mod.rs
crates/translate-utils/: Cargo.toml
crates/translate-utils/src/: encoding_type.rs  jis0208.rs  lib.rs  replacement_pool.rs  sjis_tunnel.rs  text.rs  translated_dict.rs  utils.rs
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/test_assets/: bitmap_font.json  config.json  hook_lists.json  mapping.json
xtask/test_assets/raw_patch/: patch1.txt  patch2.txt
xtask/test_assets/raw_text/: raw.json
xtask/test_assets/translated/: patch1.txt  patch2.txt
xtask/test_assets/translated_text/: raw.json
xtask/test_assets/x64dbg_1337_patch/: test.1337
