[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0"
encoding_rs = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5", features = ["derive"] }
regex = "1"
once_cell = "1.19"

translate-utils = { version = "1.0.0", path = "crates/translate-utils" }
translate-macros = { version = "1.0.0", path = "crates/translate-macros" }

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
panic = "unwind"
