[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0"
encoding_rs = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5", features = ["derive"] }
regex = "1"

translate-utils = { version = "1.0.0", path = "crates/translate-utils" }
translate-macros = { version = "1.0.0", path = "crates/translate-macros" }

[profile.release]
debug = false
lto = "fat"
strip = true
opt-level = "s"
codegen-units = 1

# 默认为`unwind`，可以通过设置环境变量`RUSTFLAGS`为`-C panic=abort`指定为`abort`
# 可以通过指定为 `immediate-abort` 极大减少DLL的体积
# 请看 https://github.com/johnthagen/min-sized-rust
panic = "unwind"
