[package]
name = "text-hook"
version = "1.0.0"
edition = "2024"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[features]

# features ---------------------------------------------------

# 调试输出
debug_output = []
# 调试输出映射文本
debug_text_mapping = ["debug_output"]

# 假设TextOutA中的`c`参数是字节而不是字符数
# 对于一些传入了错误的参数的老游戏可能会有效...
text_out_arg_c_is_bytes = []
# 读取x64dbg的1337文件并生成运行时patch代码
x64dbg_1337_patch = []
# 是否在Process attach时自动应用1337补丁
apply_1337_patch_on_attach = ["x64dbg_1337_patch"]
# 截获并替换文本数据
text_patch = []
# 提取文本而不是替换文本
text_extracting = ["text_patch"]
# 截获并替换patch数据
patch = []
# 截获ReadFile来实现patch
read_file_patch_impl = ["patch", "file_hook"]
# 导出patch的处理函数，可以用于外部汇编进行IAT调用
export_patch_process_fn = ["patch"]
# 提取补丁而不是替换补丁
patch_extracting = ["patch"]
# 当该feature开启时，create_font系列函数不再固定字体
enum_font_families = []
# 嵌入`assets/font`的自定义字体，会使用`AddFontMemResourceEx`让GDI识别
custom_font = []
# 导出默认的DllMain，内部使用`default_dll_main`，
# 使用`HookImplType::default()`作为钩子实例
export_default_dll_main = []
# 使用`assets/config.json`的`WINDOW_TITLE`字段覆写游戏主窗口标题
override_window_title = ["window_hook"]
# 模拟日语环境(目前支持很有限)
emulate_locale = []
# 启用延迟加载，对于某些特性是必要的
delayed_attach = []
# 根据`assets/hijacked`中的PE文件(仅限一个)生成对应的导出函数，
# 以进行DLL劫持，编译后需要自己改名为对应的DLL文件名，然后放在游戏EXE所在的目录。
# 在`assets/config.json`的`HIJACKED_DLL_PATH`中可以指定被劫持DLL的路径，
# 否则默认会在系统目录中寻找
dll_hijacking = ["delayed_attach"]
# 禁止映射文本
no_text_mapping = []

# 启用文本相关的钩子(包括文本映射和改变字体)
text_hook = []
# 启用文件相关的钩子
file_hook = []
# 启动窗口相关的钩子
window_hook = []
# 启动转码相关的钩子(MultiByteToWideChar & WideChar...)
code_cvt_hook = []

# 是否导出钩子函数，实际上如果用detour的话，不需要导出
export_hooks = []

# 通用impl ---------------------------------------------------

# 调试文件输出的HOOK实现，可用于调试，并导出默认的DllMain
debug_file_impl = ["debug_output", "export_default_dll_main", "file_hook"]
# 默认的HOOK实现(即使用`Hook` trait的默认代码)，并导出默认的DllMain
default_impl = ["export_default_dll_main"]

# 针对特定游戏的impl-------------------------------------------
bleed = ["export_default_dll_main", "text_hook"]
sukisuki = ["default_impl", "text_hook"]
ao_vo = [
    "export_default_dll_main",
    "text_hook",
    "window_hook",
    "file_hook",
    "apply_1337_patch_on_attach",
]
noise = ["patch", "default_impl", "text_hook"]
lusts = ["default_impl", "text_hook"]
lucky_crosse = ["default_impl", "export_patch_process_fn", "text_hook"]
cosmos = ["default_impl", "export_patch_process_fn", "text_hook"]
# 非C社的c4
c4 = ["patch", "default_impl", "enum_font_families", "text_hook"]
bittersweet_fools = ["enum_font_families", "default_impl", "text_hook"]
white_breath = ["default_impl", "patch", "text_hook"]
mikan = ["default_impl", "read_file_patch_impl", "text_hook"]
# 提取脚本需要`patch_extracting`
uminom = ["export_default_dll_main", "text_hook", "window_hook"]
bruns = [
    "export_default_dll_main",
    "text_hook",
    "override_window_title",
    "patch",
]
bokudvd = [
    "default_impl",
    "custom_font",
    "emulate_locale",
    "override_window_title",
    "text_hook",
]
mizukake = [
    "patch",
    "export_default_dll_main",
    "text_hook",
    "dll_hijacking",
    "no_text_mapping",
]
spirite_destruction = [
    "export_default_dll_main",
    "text_hook",
    "text_patch",
    "no_text_mapping",
]
rainmemory = [
    "patch",
    "export_default_dll_main",
    "text_hook",
    "dll_hijacking",
    "no_text_mapping",
]
complets = [
    "export_default_dll_main",
    "text_hook",
    "window_hook",
    "enum_font_families",
    "text_out_arg_c_is_bytes",
]

[dependencies]
translate-macros.workspace = true
translate-utils.workspace = true
anyhow.workspace = true
once_cell.workspace = true
serde.workspace = true
serde_json.workspace = true
encoding_rs.workspace = true

windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_Globalization",
    "Win32_System_Console",
    "Win32_System_ProcessStatus",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",
    "Win32_Storage_FileSystem",
] }
sha2 = "0.10"
retour = "0.4.0-alpha.4"
dynasmrt = "4.0.1"
phf = { version = "0.13", features = ["macros"] }
zstd = "0.13"
smallvec = "1"
ntapi = "0.4"
scopeguard = "1"
const-str = "0.7.0"

[build-dependencies]
anyhow.workspace = true

[lints.clippy]
missing_safety_doc = "allow"
too_many_arguments = "allow"
