[package]
name = "translate-macros"
version = "1.0.0"
edition = "2024"
license = "MIT"


[lib]
proc-macro = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
zstd = "0.13"
sha2 = "0.10"
goblin = "0.10"
convert_case = "0.8"
walkdir = "2"
fontdue = "0.9"
